--- a/src/styles/components/_headerHoraire.scss
+++ b/src/styles/components/_headerHoraire.scss
@@ -1,38 +1,40 @@
-.headHoraire {
-    padding: 25px 0 100px;
+.headhoraire {
+    padding: 25px 0 50px;
     margin: 0;
     background-position: center;
     background-size: cover;
-    background-image: url("../../assets/articles/aikido1.png");
-    p {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/articles/adultes1.jpg");
+    h1 {
         text-align: center;
-        font-size: 14px;
-        padding: 0 20px;
+        font-size: 16px;
+        padding: 25px 0 0;
+        position: relative;
+        font-weight: bold;
         color: $color-2;
-        span {
-            color: $color-1;
-        }
+        text-transform: uppercase;
     }
 }
 
 @media screen and (min-width: 750px) {
-    .headHoraire {
-        background-image: url("../../assets/articles/aikido1.png");
+    .headhoraire {
+        background-image: url("../../assets/articles/adultes2.jpg");
         padding-bottom: 100px;
-    p {
-        width: 40%;
+        height: 40vh;
+    h1 {
         margin: 0 auto;
         font-weight: 700;
         letter-spacing: 1px;
-        font-size: 16px;
-        padding: 0 50px;
+        font-size: 20px;
+        padding-top: 0px;
+        margin-top: 150px;
     }
     }
 }
 @media screen and (min-width: 1024px) {
-    .headHoraire {
-        p{
-            width: 40%;
+    .headhoraire {
+        h1{
+            padding-top: 150px;
             margin: 50px auto;
         }
     }
