--- a/src/styles/components/_horaire.scss
+++ b/src/styles/components/_horaire.scss
@@ -1,252 +1,212 @@
-.horaire {
-    /* Section Asymétrique */
-    .section {
-        display: grid;
-        grid-template: 200px repeat(3, auto) / 1fr 600px 1fr;
-        background:$color-3;
-    }
+.horaires{
     
-    .section h2 {
-        grid-area: 1 / 1 / 2 / -1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: $color-1;
-        font-size: 50px;
-        text-transform: uppercase;
-        padding-bottom: 20px;
-    }
-    .section h3 {
-        text-transform: uppercase;
-        text-align: center;
-        font-size: $font-title;
-    }
-    
-    /* Placement */
-    .bloc-1, .img-grid-1 {
-        grid-area: 2 / 2 / 3 / 3;
-    }
-    
-    .bloc-right, .img-grid-2 {
-        grid-area: 3 / 2 / 4 / 3;
-    }
+    .sections {
+        padding:0 20px;
+        .center {
+            h2 {
+                color: $color-1;
+                font-size: 40px;
+                text-align: center;
+                padding: 20px 0;
+            }
+            
+            .blocs { 
+                display: flex;
+                flex-wrap: wrap;
+                 margin-bottom: 50px;
+                 
+                .img1, .img2, .img3 {
+                    margin: 0 auto;
+                    height: 200px;
+                }
+                
+                .wrappers, .wrappers1, .wrappers2 {
+                    border-top: solid 5px $color-1;
+                    padding: 0 15px;
 
-    .bloc-3, .img-grid-3 {
-        grid-area: 4 / 2 / 5 / 3;
-    }
-    .bloc {
-        background: $color-2;
-        color: $color-3;
-        opacity: 0.7;
-        position: relative;
-        border-radius: 2px;
-        height: 750px;
-        margin-bottom: 250px;
-    }
-
-    .img-grid {
-        width:500px;
-        height: 700px;
-        object-fit: cover;
-        position: relative;
-    }
-
-    .img-grid-1, .img-grid-3 {
-        top: 130px;
-        left: 50px;
-    }
-    .bloc-left {
-        left: -300px;
-    }
-    .bloc-txt-left {
-        width: 50%;
-        height: 100%;
-    }
-    
-    .bloc-txt-left h3 {
-        white-space: nowrap;
-        color: $color-1;
-        font-size: $font-title;
-        margin: 30px 15px;
-    }
-    
-    .bloc-txt-left p {
-        line-height: 40px;
-        font-size: $font-par;
-        padding: 15px;
-    }
-    
-    .bloc .btn-bloc-left {
-        border-radius: 9999px;
-        border: 1px solid #333;
-        background: $color-1;
-        color: $color-2;
-        text-align: center;
-        padding: 20px 35px;
-        font-size: $font-title;
-        width: 250px;
-        margin-left: 20px;
-        cursor: pointer;
-        display: block;
-    }
-    .bloc-right {
-        right: -300px;
-    }
-    .img-grid-2 {
-        top: 130px;
-        left: -100px;
-    }
-    
-    .bloc-txt-right {
-        position: absolute;
-        right: 0;
-        width: 50%;
-        height: 100%;
-    }
-    .bloc-txt-right h3 {
-        position: relative;
-        color: $color-1;
-        font-size: $font-title;
-        margin: 30px 15px;
-    }
-    .bloc-txt-right p {
-        line-height: 40px;
-        font-size: $font-par;
-        padding: 15px;
-    }
-    .bloc-txt-right button {
-        margin: 5px auto;
-    }
-    
-    /* Lines verticales */
-    
-    .line-gauche {
-        grid-area: 1 / 2 / -1 / 3;
-        border-left: 1px solid #333;
-    }
-    .line-droite {
-        grid-area: 1 / 3 / -1 / 4;
-        border-left: 1px solid #333;
-    }
-    
-    @media screen and (max-width: 1200px) {
-        .section {
-            grid-template: 200px repeat(6, auto) 100px;
-        }
-        .section h2 {
-            font-size: $font-title;
-            padding-bottom: 0px;
-        }
-        .bloc-1 {
-            grid-area: 2 / 2 / 3 / 3;
-        }
-        .img-grid-1 {
-            grid-area: 3 / 2/ 4 / 3;
-        }
-    
-        .bloc-right {
-            grid-area: 4 / 2 / 5 / 3;
-        }
-        .img-grid-2 {
-            grid-area: 5 / 2 / 6 / 3;
-        }
-        .bloc-3 {
-            grid-area: 6 / 2 / 7 / 3;
-        }
-        .img-grid-3 {
-            grid-area: 7 / 2 / 8 / 3;
-        }
-        .bloc {
-            height: 100%;
-            margin-bottom: 0px;
-        }
-        .img-grid {
-            position: static;
-            width: 600px;
-            height: 750px;
-        }
-        .img-grid-1, .img-grid-3 {
-            top: 0px;
-            left: 0px;
-        }
-        .img-grid-1 {
-            top: 0px;
-            left: 0px;
-        }
-        .bloc-left {
-            left: 0px;
-        }
-        .bloc-right {
-            right: 0px;
-        }
-        .bloc-txt-left {
-            width: 100%;
-            height: 100%;
-        }
-        .bloc-txt-left h3, .bloc-txt-right {
-            text-align: center;
-        }
-        .bloc-txt-left p, .bloc-txt-right p {
-            font-size: $font-par;
-            line-height: 1.8;
-            padding: 15px;
-        }
-        .bloc button {
-            font-size: $font-title;
-            padding: static;
-            margin-bottom: 30px;
-        }
-    
-        .bloc-txt-right {
-            position: static;
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    @media screen and (max-width: 960px) {
-        .accueil {
-            top: 0;
-            height: 300px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            padding-top: 1px;
-            min-height: auto;
-            background-position: right;
-        }
-        .accueil h1 {
-            margin-top: 150px;
-            font-size: 20px;
-        }
-        
-        .section {
-            grid-template: 150px repeat(6, auto) 100px / 100%;
-        }
-    
-        .line-gauche, .line-droite {
-            display: none;
-        }
-    
-        .section h2 {
-            font-size: $font-title;
-        }
-    
-        .bloc, .img-grid {
-            grid-area: auto;
-        }
-    
-        .img-grid {
-            width: 100%;
-            height: 100%;
-        }
-        .bloc-txt-left h3 .bloc-txt-right h3 {
-            font-size: $font-title;
-        }
-        .bloc-txt-right {
-            width: 100%;
+                    h3 {
+                        color: $color-1;
+                        text-align: center;
+                        text-transform: uppercase;
+                    }
+                    p {
+                        color: $color-3;
+                        font-size: 14px;
+                        line-height: 1.2;
+                        padding:  0 15px;
+                    }
+                }
+                 
+                .btns {
+                    border: none;
+                    background: transparent;
+                    position: relative;
+                    display: inline-block;
+                    box-shadow: 4px 4px 0px 0px #5eb7b7;
+                    padding: 13px 30px;
+                    text-transform: uppercase;
+                    letter-spacing: 2px;
+                    cursor: pointer;
+                    color: $color-1;
+                    margin-left: auto;
+                    right: 0;
+                    margin-top: 10px;
+                    a {
+                        text-decoration: none;
+                        color: $color-3;
+                        font-weight: 700;
+                      }
+                }
+            }
+            .enfants .img1 {
+                height: 220px;
+            }
+            .competitions .img1 {
+                height: 180px;
+            }
         }
     }
 
 }
 
+@media screen and (min-width: 750px) {
+        
+    .horaires {
+        .sections {
+            .center {
+                h2 {
+                   font-size: 50px;
+               }
+               .blocs {
+                    .img1 {
+                        height: 300px;
+                        margin-left: 20px;
+                        width: 400px;
+                        position: relative;
+                        left: 50%;
+                        transform: translate(-90%, 30%);
+                    }
+                    .img2 {
+                        height: 300px;
+                        margin-left: 20px;
+                        width: 400px;
+                        position: relative;
+                        left: 100%;
+                        transform: translate(-110%, 20%);
+                    }
+                    .img3 {
+                        height: 300px;
+                        margin-left: 20px;
+                        width: 400px;
+                        position: relative;
+                        left: 50%;
+                        transform: translate(-90%, 30%);
+                    }
+                    .wrappers {
+                        border-top: 0;
+                        box-shadow: -5px -5px $color-1;
+                        background: $color-2;
+                        margin: 0 auto;
+                        position: relative;
+                        transform: translate(40%, 0%);
+                        width: 50%;
+                        opacity: 0.8;
+                        p {
+                            padding-top: 10px;
+                        }
+                    }
+                    .wrappers1 {
+                        border-top: 0;
+                        box-shadow: 5px -5px $color-1;
+                        background: $color-2;
+                        margin: 0 auto;
+                        position: relative;
+                        transform: translate(-40%, -10%);
+                        width: 50%;
+                        p {
+                            padding-top: 10px;
+                        }
+                    }
+                    .wrappers2 {
+                        border-top: 0;
+                        box-shadow: -5px -5px $color-1;
+                        background: $color-2;
+                        margin: 0 auto;
+                        position: relative;
+                        transform: translate(40%, 0%);
+                        width: 50%;
+                        p {
+                            padding-top: 10px;
+                        }
+                    }
+                    .btns {
+                        margin-top: 20px;
+                        margin-left: 50%;
+                        
+                    }
+                    .btn {
+                        box-shadow: 4px px 0px 0px #5eb7b7;
+                    }
+                }
+                    
+                }  
+           }
+
+           
+        }
+    }
+
+    @media screen and (min-width: 880px) {
+        
+        .horaires {
+            .sections {
+                .center {
+                   .blocs {
+                       margin-bottom: 300px;
+
+                       .wrappers, .wrappers2 {
+                        transform: translate(5%, 80%);
+                       }
+                       .wrappers1 {
+                        transform: translate(-70%, 70%);
+                       }
+                   }
+                   
+                }
+            }
+        }
+    }
+
+
+
+
+    @media screen and (min-width: 1200px) {
+        .horaires {
+            .sections {
+                .center {
+                    h2 {
+                       font-size: 50px;
+                   }
+                   .blocs {
+                       margin-bottom: 300px;
+                       .wrappers, .wrappers2 {
+                        transform: translate(-20%, 80%);
+                        width: 400px;
+                       }
+                        .img1, .img3 {
+                            transform: translate(-100%, 30%);
+                        }
+                        .wrappers1 {
+                            transform: translate(-80%, 70%);
+                           }
+                        .img2 {
+                            transform: translate(-140%, 20%);
+                        }
+                        .btns {
+                            margin-left: 60%;
+                        }
+                    }
+                }
+            }
+        }
+    }
